--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,9 +1,9 @@
 {
-  "description": "Adds a new panel to the developer tools. The panel contains buttons that demonstrate various basic features of the devtools API.",
+  "description": "Inspect the state of DataStore in the inspector, with utility tools",
   "manifest_version": 2,
-  "name": "devtools-panels",
+  "name": "datastore-inspector",
   "version": "1.0",
-  "author": "Christophe Villeneuve",
+  "author": "dodo721",
   "homepage_url": "https://github.com/mdn/webextensions-examples/tree/master/devtools-panels",
   "icons": {
     "48": "icons/star.png"
