--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "webpack --progress --color && ./gitstamp.sh && web-ext build --source-dir=extension --artifacts-dir=dist",
     "compile-watch": "webpack  --progress --color --watch",
-    "compile-watch-fast": "NO_PROD=true webpack --progress --color --watch"
+    "compile-watch-fast": "NO_PROD=true webpack --progress --color --watch",
+    "run": "node watch.js"
   },
   "author": "",
   "license": "ISC",
